--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -15,6 +15,9 @@ apply plugin: 'com.android.application'
 repositories {
     jcenter()
     google()
+    maven { url 'https://jitpack.io' }
+
+
 }
 
 dependencies {
@@ -22,6 +25,13 @@ dependencies {
     implementation "com.android.support:gridlayout-v7:27.0.2"
     implementation "com.android.support:cardview-v7:27.0.2"
     implementation "com.android.support:appcompat-v7:27.0.2"
+    implementation "com.github.PhilJay:MPAndroidChart:v3.1.0-alpha"
+
+    def room_version = "1.1.1"
+
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    implementation 'com.android.support:design:27.0.2'
 }
 
 // The sample build uses multiple directories to
