--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -50,6 +50,12 @@
             android:label="@string/select_device"
             android:theme="@android:style/Theme.Holo.Dialog"/>
 
+        <activity
+            android:name="ru.clevertec.AQS.monitor.SettingsActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/settings_title"
+            android:theme="@android:style/Theme.Holo.Dialog"/>
+
     </application>
 
 </manifest>
